--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap-icons": "^1.11.3",
     "erp-cartolito-v2": "file:",
     "ngx-spinner": "^17.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
